crates/oxc_react_compiler/tests/snapshots/hoisted-context-variable-in-outlined-fn.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/hoisted-context-variable-in-outlined-fn.js
---
import { c as _c } from "react/compiler-runtime";
import { CONST_TRUE, useIdentity } from "shared-runtime";
const hidden = CONST_TRUE;
function useFoo() {
	const $ = _c(4);
	const makeCb = useIdentity(_temp);
	let t0;
	if ($[0] !== makeCb) {
		t0 = makeCb();
		$[0] = makeCb;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	let t1;
	if ($[2] !== t0) {
		t1 = <Stringify fn={t0} shouldInvokeFns={true} />;
		$[2] = t0;
		$[3] = t1;
	} else {
		t1 = $[3];
	}
	return t1;
}
function _temp() {
	const logIntervalId = () => {
		log(intervalId);
	};
	let intervalId;
	if (!hidden) {
		intervalId = 2;
	}
	return () => {
		logIntervalId();
	};
}
export const FIXTURE_ENTRYPOINT = {
	fn: useFoo,
	params: []
};
