crates/oxc_react_compiler/tests/snapshots/hoisting-invalid-tdz-let.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/hoisting-invalid-tdz-let.js
---
import { c as _c } from "react/compiler-runtime";
function Foo() {
	const $ = _c(2);
	let getX;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		getX = () => x;
		console.log(getX());
		let x = 4;
		x = x + 5;
		$[0] = getX;
	} else {
		getX = $[0];
	}
	let t0;
	if ($[1] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = <Stringify getX={getX} shouldInvokeFns={true} />;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Foo,
	params: []
};
