crates/oxc_react_compiler/tests/snapshots/hoisting-let-declaration-without-initialization.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/hoisting-let-declaration-without-initialization.js
---
import { c as _c } from "react/compiler-runtime";
import { CONST_NUMBER1, Stringify } from "shared-runtime";
function useHook(t0) {
	"use memo";
	const $ = _c(2);
	const { cond } = t0;
	let t1;
	if ($[0] !== cond) {
		const getX = () => x;
		let x;
		if (cond) {
			x = CONST_NUMBER1;
		}
		t1 = <Stringify getX={getX} shouldInvokeFns={true} />;
		$[0] = cond;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: () => {},
	params: [{ cond: true }],
	sequentialRenders: [
		{ cond: true },
		{ cond: true },
		{ cond: false }
	]
};
