crates/oxc_react_compiler/tests/snapshots/hoisting-nested-block-statements.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/hoisting-nested-block-statements.js
---
import { print } from "shared-runtime";
function hoisting(cond) {
	if (cond) {
		print(1);
	}
	print(2);
}
export const FIXTURE_ENTRYPOINT = {
	fn: hoisting,
	params: [false]
};
